corrigindo tamanho de fontes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
             <h1><span class="color1" >Tati Fernandes</span> <span  class="color2"> estética avançada</span></h1>
     
-            <p>A Tati Fernandes Estética Avançada é o lugar perfeito para quem busca uma experiência única de beleza e bem-estar. Oferecemos uma ampla gama de serviços, desde tratamentos faciais e corporais até terapias holísticas como o ThetaHealing®, que proporcionam uma profunda transformação na vida das pessoas.</p>
+            <p>A Tati Fernandes Estética Avançada é o lugar perfeito para quem busca uma experiência <b>única</b> de beleza e bem-estar. Oferecemos uma ampla gama de serviços, desde tratamentos faciais e corporais até terapias holísticas como o <b>ThetaHealing®</b>, que proporcionam uma profunda transformação na vida das pessoas.</p>
             <div class="video-apresentacao" >
                 <iframe src="https://www.youtube.com/embed/x_m1xByOfh0"></iframe>
             </div>
